# poc-hotel-reservation-system-rust

./: Cargo.toml
common-utils/: Cargo.toml
common-utils/src/: lib.rs  observability.rs
hotel-service-app/: Cargo.toml
hotel-service-app/db/migration/: 00_CREATE_BDD.sql
hotel-service-app/src/: main.rs
hotel-service-app/src/server/: mod.rs  starter.rs
migration/: Cargo.toml
migration/src/: database_config.rs  lib.rs
payment-service-app/: Cargo.toml
payment-service-app/src/: lib.rs  main.rs
payment-service-app/src/config/: db.rs
rate-service-app/: Cargo.toml
rate-service-app/src/: lib.rs
rate-service-app/src/config/: db.rs
reservation-service-app/: Cargo.toml
reservation-service-app/src/: lib.rs
