[package]
name = "common-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.5.17"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
serde = "1.0.147"
serde_json = "1.0.87"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.3.4", features = ["trace", "cors"] }
